tried aligning statatistics graphs next to each other; did not work with ChartControl charts; used different package: react chartjs 2; aligned graphs side by side with correct font size and correct graph size

--- a/Dev/Frontend/SmartQS/src/webparts/smartqs/components/Dashboard/Dashboard.module.scss
+++ b/Dev/Frontend/SmartQS/src/webparts/smartqs/components/Dashboard/Dashboard.module.scss
@@ -1,6 +1,21 @@
 .Dashboard {
-  margin: 5px;
+  Stack {
+    margin-top: 0px;
+  }
 }
 .DatePicker {
   width: 220px;
+}
+.ChartContainer {
+  width: 100%;
+}
+.leftChart {
+  float: left;
+  width: 50%;
+  position: relative;
+}
+.rightChart {
+  float: right;
+  width: 50%;
+  position: relative;
 }
